# ai-pratices

./: .env_example  main.py  pyproject.toml  test.ipynb
.gemini/: settings.json
code-interpreter/: adv_code_interpreter.ipynb  data.csv  easy_code_interpreter.ipynb  example_usage.py  prompt.py  prompts_optimized.py  run_python_code.ipynb  temp.py  test.ipynb  utils.py
code-interpreter/bi_code_interpreter/: MATPLOTLIB_CHINESE_FONT.md  PROMPT_DESIGN.md  README_TOOLS.md  REFACTOR_ANALYZE_RESULTS.md  REFACTOR_SUMMARY.md  __init__.py  prompts.py  test_tools.ipynb  tools.py
plan-and-execute/: plan_and_exec.ipynb  prompts.py
